--- a/WolkenNET/static/css/style.css
+++ b/WolkenNET/static/css/style.css
@@ -855,19 +855,20 @@ a.forum-item-title:hover {
   padding-top: 15px;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 991px) {
   .inbox .mail_list .list-group-item .controls {
       margin-top: 3px
   }
 }
 
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
     .col-stats {
            box-sizing:initial;
            margin: 3px!important;
            flex: 0 0 100%!important;
            max-width: 100%!important;
+           margin-bottom: 20px!important;
     }
     .col-4 {
         flex: 0 0 100%!important;
