--- a/WolkenNET/static/css/style.css
+++ b/WolkenNET/static/css/style.css
@@ -840,9 +840,6 @@ a.forum-item-title:hover {
   color: #333;
   font-weight: 700
 }
-.col-8-post  {
-  padding-top: 15px!important;
-}
 
 .inbox .btn-group {
   box-shadow: none
@@ -857,7 +854,9 @@ a.forum-item-title:hover {
 .mobile-posts {
   display: none;
 }
-
+.col-8-post  {
+  padding-top: 15px!important;
+}
 @media only screen and (max-width: 991px) {
   .inbox .mail_list .list-group-item .controls {
       margin-top: 3px
@@ -878,6 +877,9 @@ a.forum-item-title:hover {
            max-width: 100%!important;
            margin-bottom: 20px!important;
     }
+    .col-8-post  {
+      margin-bottom: 30px!important;
+    }
     .col-4 {
         flex: 0 0 100%!important;
         max-width: 100%!important;
@@ -888,6 +890,7 @@ a.forum-item-title:hover {
         padding: 0px;
     }
     .home-stats {
+      padding-top: 10px;
         padding-left: 15px;
     }
     .huge.heading {
