--- a/WolkenNET/templates/subforum.html
+++ b/WolkenNET/templates/subforum.html
@@ -2,20 +2,29 @@
 <div class="container">
 <section class="content inbox">
     <div class="container-fluid">
+        
         <div class="row clearfix">
             <div class="col-lg-12">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item"><a href="/${bclink}">${bcsite}</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">${titlebar}</li>
+                    </ol>
+                  </nav>
+                  <div class="col">
+                    <div class="input-group search">
+                        <input type="text" class="form-control" placeholder="Suche nach Beiträgen im Thema: ${titlebar}">
+                        <span class="input-group-addon">
+                           
+                        </span>
+                    </div>
+                </div> 
                 <div class="card action_bar">
                     <div class="body">
-                        <div class="row clearfix">
-
-                            <div class="col">
-                                <div class="input-group search">
-                                    <input type="text" class="form-control" placeholder="Suche nach Beiträgen im Thema: ${titlebar}">
-                                    <span class="input-group-addon">
-                                       
-                                    </span>
-                                </div>
-                            </div>                                                     
+                        
+                        <div class="row">
+    
+                                                                                
                         </div>
                     </div>
                 </div>
