Breadcrumb für Beiträge

--- a/WolkenNET/templates/beitrag.html
+++ b/WolkenNET/templates/beitrag.html
@@ -3,6 +3,13 @@
     <div class="row cn-profile">
         <div class="col-lg-12 cn-col">
             <div class="wrapper wrapper-content animated fadeInRight">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                      <li class="breadcrumb-item"><a href="/${bclink}">${bcsite}</a></li>
+                      <li class="breadcrumb-item"><a href="/thema/${bc2_link}">${bc2}</a></li>
+                      <li class="breadcrumb-item active" aria-current="page">${titlebar}</li>
+                    </ol>
+                  </nav>
                 <div class="">
                        
                     <div class="row col-8-home col-8-post">
