--- a/WolkenNET/templates/tippsundtricks.html
+++ b/WolkenNET/templates/tippsundtricks.html
@@ -21,8 +21,18 @@
                                     ${tag.posts}
                                 </span>
                                 <div>
-                                    <small>posts</small>
+                                    <small>Posts</small>
                                 </div>
+                                
+                            </div>
+                            <div class="col-md-1 forum-info">
+                                <span class="views-number">
+                                    ${tag.views}
+                                </span>
+                                <div>
+                                    <small>Klicks</small>
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
