Text richtung der BBCode Klasse verbessert

--- a/WolkenNET/templates/base.html
+++ b/WolkenNET/templates/base.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" /> 
-      <meta name="description" content="PNet ist ein Forum für Psychisch Kranke menschen">
+      <meta name="description" content="WolkenNET ist ein Forum für Psychisch Kranke menschen">
       <meta name="author" content="kzki-Development">
       <meta name="keywords" content="depressionen, krankheit, medikamente">
       <meta name="theme-color" content="#8e44ad">
@@ -12,9 +12,8 @@
       <meta property="og:icon" content="/img/logo_luck.png">
       <meta property="og:type" content="wolkennet.de">
       <meta property="og:title" content="${titlebar} - WolkenNET">
-      <meta property="og:description" content="PNet ist ein Forum für Psychisch Kranke menschen">
+      <meta property="og:description" content="WolkenNET ist ein Forum für Psychisch Kranke menschen">
       <title>WolkenNET - ${titlebar}</title>
-     
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
