--- a/WolkenNET/templates/forenregeln.html
+++ b/WolkenNET/templates/forenregeln.html
@@ -1,7 +1,7 @@
 <#include "base.html">
 <div class="container container-home col-8-home col-8-imp">
     <p><strong>§ 1 Geltungsbereich</strong></p>
-<p>Für die Nutzung des Forums pNET von der Familie Herpers gelten nachfolgende Bedingungen. </p>
+<p>Für die Nutzung des Forums WolkenNET von der Familie Herpers gelten nachfolgende Bedingungen. </p>
 <p>Die Nutzung des Forums ist nur zulässig, wenn Du als Nutzer diese Nutzungsbedingungen akzeptierst. </p>
 <p>
 <strong>§ 2 Registrierung, Vertragsschluss und -gegenstand</strong>
