Mobile Klicks anzeigen und Mobile Views

--- a/WolkenNET/templates/tippsundtricks.html
+++ b/WolkenNET/templates/tippsundtricks.html
@@ -13,7 +13,7 @@
                                     <i class="${tag.icon} fa-2x"></i>
                                 </div>
                                 <a href="/thema/${tag.sublink}" class="forum-item-title">${tag.title}</a>
-                                <div class="forum-sub-title"><span class="mobile-posts"><i class="fas fa-mail-bulk"></i> ${tag.posts}</span> ${tag.description}</div>
+                                <div class="forum-sub-title"><span class="mobile-posts"><i class="fas fa-envelope-square"></i> ${tag.posts} | <i class="fas fa-eye"></i> ${tag.views}</span> ${tag.description}</div>
                             </div>
                             
                             <div class="col-md-1 forum-info">
