--- a/WolkenNET/static/css/style.css
+++ b/WolkenNET/static/css/style.css
@@ -334,6 +334,7 @@ body {
     position: relative;
     background: #FFF;
     padding-bottom: 13px;
+    padding-top: 10px;
     box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
     margin-bottom: 30px;
     border-radius: .28571429rem;
