--- a/WolkenNET/templates/base.html
+++ b/WolkenNET/templates/base.html
@@ -41,8 +41,8 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="#"><i class="fas fa-pills"></i> Medikamente</a>
-                  <a class="dropdown-item" href="#"><i class="fas fa-user-check"></i> Therapien</a>
-                  <a class="dropdown-item" href="#"><i class="fas fa-user-md"></i> Klinik & Ärzte</a>
+                  <a class="dropdown-item" href="/therapien"><i class="fas fa-user-check"></i> Therapien</a>
+                  <a class="dropdown-item" href="/klinikundaerzte"><i class="fas fa-user-md"></i> Klinik & Ärzte</a>
                 </div>
               </li>
               <#if permissions = "10">
