--- a/WolkenNET/templates/home.html
+++ b/WolkenNET/templates/home.html
@@ -27,7 +27,7 @@
         <ul class="list-home">
             <li>Du hast Erfahrungen mit <a href="">Medikamenten</a>?
                 <br><e class="text-desc">Hier kannst du deine Erfahrungen austauschen</e></li>
-            <li>Du suchst nach Möglichkeiten zum <a href="">Hilfesuchen</a>?
+            <li>Du suchst nach Möglichkeiten zum <a href="/klinikundaerzte">Hilfesuchen</a>?
                 <br><e class="text-desc">Hier werden Anflaufstellen aufgelistet</e></li>
             <li>Du suchst einen <a href="">Chatraum</a> zum austauschen?
                  <br><e class="text-desc">Hier kannst du dich über Probleme oder Fortschritte austauschen</e></li>
