--- a/WolkenNET/static/css/style.css
+++ b/WolkenNET/static/css/style.css
@@ -336,7 +336,7 @@ body {
     padding-bottom: 13px;
     padding-top: 10px;
     box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
-    margin-bottom: 30px;
+    margin-bottom: 12px;
     border-radius: .28571429rem;
     border: 1px solid rgba(34,36,38,.15);
 }
@@ -543,6 +543,10 @@ a {
   max-width: 140px;
   border-radius: 3px;
 }
+.pagination {
+  padding-left: 0px;
+  margin-left: 0px;
+}
 .media-body > .media .forum-avatar {
   width: 70px;
   margin-right: 10px;
@@ -557,7 +561,6 @@ a {
 .forum-item {
   margin: 10px 0;
   padding: 10px 0 20px;
-  border-bottom: 1px solid #f1f1f1;
 }
 .views-number {
   font-size: 24px;
