--- a/WolkenNET/templates/impressum.html
+++ b/WolkenNET/templates/impressum.html
@@ -9,7 +9,7 @@ Reinhold-Buettner-Str.5<br />
 
 <h2>Kontakt</h2>
 <p>Telefon: +49 (0) 2841 39 10 479<br />
-E-Mail: Corinnaherpers@web.de</p>
+E-Mail: info@wolkennet.de</p>
 
 <h2>Redaktionell Verantwortlicher</h2>
 <p>Corinna Herpers<br />
