--- a/WolkenNET/templates/beitrag.html
+++ b/WolkenNET/templates/beitrag.html
@@ -25,7 +25,7 @@
                     
                         </div> <!-- end col-->
                     
-                        <div class="col-lg-8 col-xl-8 li-p">
+                        <div class="col-lg-8">
                            
                     
                                             <div>${bbcode_text}</div>
