--- a/WolkenNET/templates/base.html
+++ b/WolkenNET/templates/base.html
@@ -58,7 +58,8 @@
             </li>
           </ul>
           <#if loggedin=="false">
-          <script>var loggedin = false;</script>
+          <script>var loggedin = false;
+          var recaptcha = "${recaptcha}"</script>
           <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-login-modal-sm">Einloggen</a>
