--- a/WolkenNET/templates/base.html
+++ b/WolkenNET/templates/base.html
@@ -3,18 +3,19 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" /> 
-      <meta name="description" content="WolkenNET ist ein Forum für Psychisch Kranke menschen">
-      <meta name="author" content="kzki-Development">
+      <meta name="description" content="Das WolkenNET beschäftigt sich mit sämtlichen psychischen Krankheiten, hier findest du Tipps und Tricks, Anlaufstellen, Kliniken und Ärzte. Wir würden uns freuen wenn du dem WolkenNET etwas beitragen würdest">
+      <meta name="author" content="Programmierung von Marc Andre Herpers">
       <meta name="keywords" content="depressionen, krankheit, medikamente">
-      <meta name="theme-color" content="#8e44ad">
-      <meta name="color" content="#8e44ad">
+      <meta name="theme-color" content="#2980b9">
+      <meta name="color" content="#2980b9">
       <meta property="og:url" content="ENTER DOMAIN">
       <meta property="og:icon" content="/img/logo_luck.png">
       <meta property="og:type" content="wolkennet.de">
       <meta property="og:title" content="${titlebar} - WolkenNET">
-      <meta property="og:description" content="WolkenNET ist ein Forum für Psychisch Kranke menschen">
+      <meta property="og:description" content="Das WolkenNET beschäftigt sich mit sämtlichen psychischen Krankheiten, hier findest du Tipps und Tricks, Anlaufstellen, Kliniken und Ärzte. Wir würden uns freuen wenn du dem WolkenNET etwas beitragen würdest">
       <title>WolkenNET - ${titlebar}</title>
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+      <script src="https://kit.fontawesome.com/3046fddc30.js" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
       <link rel="icon" type="image/vnd.microsoft.icon" href="/img/favicon.ico">
