recaptcha turbolinks fix

--- a/WolkenNET/templates/base.html
+++ b/WolkenNET/templates/base.html
@@ -5,10 +5,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" /> 
       <meta name="description" content="Das WolkenNET beschäftigt sich mit sämtlichen psychischen Krankheiten, hier findest du Tipps und Tricks, Anlaufstellen, Kliniken und Ärzte. Wir würden uns freuen wenn du dem WolkenNET etwas beitragen würdest">
       <meta name="author" content="Programmierung von Marc Andre Herpers">
-      <meta name="keywords" content="depressionen, krankheit, medikamente">
+      <meta name="keywords" content="depressionen, krankheit, medikamente, tippsundtricks, anlaufstellen, kliniken, aerzte, chat. borderline">
       <meta name="theme-color" content="#2980b9">
       <meta name="color" content="#2980b9">
-      <meta property="og:url" content="ENTER DOMAIN">
+      <meta property="og:url" content="https://wolkennet.de">
       <meta property="og:icon" content="/img/logo_luck.png">
       <meta property="og:type" content="wolkennet.de">
       <meta property="og:title" content="${titlebar} - WolkenNET">
@@ -98,6 +98,7 @@
           </li>   
       </ul>
         </#if>
+        <script>var recaptcha="${recaptcha}";</script>
         </div>
       </nav>
 
